--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   // https://nuxt.com/docs/guide/concepts/typescript
   "extends": "./.nuxt/tsconfig.json",
   "compilerOptions": {
-    "strict": true
+    "strict": false
   },
   "paths": {
     "@/interfaces/*": ["./interfaces/*"]
