--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nuxt/image": "^1.8.0",
     "@nuxtjs/supabase": "^1.4.0",
     "@nuxtjs/tailwindcss": "^6.12.1",
+    "@pinia/nuxt": "^0.5.4",
     "nuxt": "^3.13.0",
     "vue": "latest",
     "vue-router": "latest"
