--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@formkit/nuxt": "^1.6.7",
     "@nuxt/image": "^1.8.0",
+    "@nuxtjs/i18n": "^8.5.5",
     "@nuxtjs/supabase": "^1.4.0",
     "@nuxtjs/tailwindcss": "^6.12.1",
     "@pinia/nuxt": "^0.5.4",
