show usage code

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@vueuse/core": "^11.1.0",
     "@vueuse/nuxt": "^11.1.0",
     "nuxt": "^3.13.0",
+    "prismjs": "^1.29.0",
     "vue": "latest",
     "vue-router": "latest"
   },
