--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@formkit/nuxt": "^1.6.7",
+    "@nuxt/content": "^2.13.2",
     "@nuxt/image": "^1.8.0",
     "@nuxtjs/i18n": "^8.5.5",
     "@nuxtjs/supabase": "^1.4.0",
