--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@formkit/auto-animate": "^0.8.2",
     "@formkit/nuxt": "^1.6.7",
     "@nuxt/content": "^2.13.2",
     "@nuxt/image": "^1.8.0",
@@ -19,6 +20,7 @@
     "@pinia/nuxt": "^0.5.4",
     "@vueuse/core": "^11.1.0",
     "@vueuse/nuxt": "^11.1.0",
+    "animate.css": "^4.1.1",
     "nuxt": "^3.13.0",
     "prismjs": "^1.29.0",
     "vue": "latest",
