--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "pushdb": "bun x drizzle-kit push"
+    "pushdb": "bun x drizzle-kit push",
+    "studio": "drizzle-kit studio --port=3000"
   },
   "dependencies": {
     "@formkit/auto-animate": "^0.8.2",
