--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@formkit/nuxt": "^1.6.7",
     "@nuxt/content": "^2.13.2",
     "@nuxt/image": "^1.8.0",
+    "@nuxtjs/google-fonts": "^3.2.0",
     "@nuxtjs/i18n": "^8.5.5",
     "@nuxtjs/supabase": "^1.4.0",
     "@nuxtjs/tailwindcss": "^6.12.1",
